# axum-htmx-templates

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.cjs  Cargo.toml  Dockerfile  Makefile.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
assets/: main.css
src/: main.rs
templates/layouts/: base.html
templates/pages/: home.html  learn-more.html
